Fix things!
Fix Terminal to some degree, broken in
https://github.com/1j01/project-nexus/commit/f5106608269eb749ac5460d6c1988e79249d4fb3

Update dependencies with some fixes

Fix devtools "Detached from target" by only loading one instance of an
entire operating system's styles (with sourcemaps)
https://github.com/nwjs/nw.js/issues/2738

Fix icon reverting to nw.js logo when switching to elementary styles

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -313,7 +313,3 @@ pre {
 	border-top-left-radius: 2px;
 	border-bottom-left-radius: 2px;
 }
-/* fix button using default browser styling instead of darkliciousness */
-.window-frame .button {
-	background-color: transparent;
-}
